--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ section {
 	justify-content: center;
 	align-items: center;
 	gap: 3rem;
+	margin-bottom: 5rem;
 }
 
 .options-container {
@@ -47,6 +48,12 @@ section {
 	width: 75%;
 	flex-wrap: wrap;
 	gap: 2rem;
+}
+
+@media (max-width: 820px) {
+	.scales-container {
+		width: 90%;
+	}
 }
 
 @media (max-width: 800px) {
