--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,12 @@ section {
 
 .options-container {
 	display: flex;
+	justify-content: center;
 	gap: 5em;
+	padding: 1rem;
+	border-radius: 1rem;
+	background-color: rgba(255, 255, 255, 0.4);
+	backdrop-filter: blur(0.2rem);
 }
 
 .option {
