Changed site theme from purple to blue

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 }
 
 :root {
-	--background-colour: #d3c4f7;
-	--darker-background-colour: #5f527c;
+	--background-colour: #548adb;
+	--darker-background-colour: #10346b;
 }
 
 body {
