--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ section {
 .options-container {
 	display: flex;
 	justify-content: center;
-	gap: 5em;
+	gap: 5rem;
 	padding: 1rem;
 	border-radius: 1rem;
 	background-color: rgba(255, 255, 255, 0.4);
@@ -55,17 +55,27 @@ section {
 	margin-bottom: 2rem;
 }
 
-@media (max-width: 820px) {
-	.scales-container {
-		width: 90%;
+@media (max-width: 1050px) {
+	.options-container {
+		gap: 3rem;
+	}
+
+	.option {
+		font-size: 1.2rem;
 	}
 }
 
-@media (max-width: 800px) {
+@media (max-width: 920px) {
 	.options-container {
-		gap: 3em;
+		gap: 2rem;
 	}
 
+	.option {
+		font-size: 1.1rem;
+	}
+}
+
+@media (max-width: 850px) {
 	.option {
 		gap: 0.3rem;
 		font-size: 1rem;
@@ -80,14 +90,28 @@ section {
 	}
 }
 
-@media (max-width: 570px) {
+@media (max-width: 820px) {
+	.scales-container {
+		width: 90%;
+	}
+}
+
+@media (max-width: 710px) {
 	.options-container {
 		flex-direction: column;
 		align-items: flex-end;
 		gap: 1rem;
 	}
 
+	.option:last-child {
+		margin-right: auto;
+		margin-left: 0.5ch;
+	}
+
 	#note-select {
 		width: 12rem;
 	}
+}
+
+@media (max-width: 570px) {
 }
